<resources>
    <string name="app_name">NGO</string>
    <string name="geography">Geography:</string>
    <string name="pan_india">PAN India</string>
    <string name="change"><u>Change</u></string>
    <string name="maintenance">Maintenance</string>
    <string name="performance">Performance</string>
    <string name="cells_imapacted">Cells impacted</string>
    <string name="consumption">Consumption</string>
    <string name="throughput">Throughput</string>
    <string name="voice">Voice</string>
    <string name="view_details">View Details</string>
    <string name="button_ok">Ok</string>
    <string name="version_update_msg"> The application version you are currently running has been marked obsolete by your administrator. Kindly upgrade to the latest version to continue using this application</string>
    <string name="something_went_wrong">Oops! Something went wrong.\nPlease try again.</string>
    <string name="dcr">DCR</string>
    <string name="complaints">Complaints</string>
    <string name="projects">Projects</string>
    <string name="surveys">Surveys</string>
    <string name="atp">ATP</string>
    <string name="supervisory">Supervisory</string>
    <string name="useful_links">Useful links</string>
    <string name="hide_details">Hide Details</string>
    <string name="technology">Technology</string>
    <string name="open_alerts">Alerts</string>
    <string name="time_clocking">Time Clocking</string>
    <string name="deliquency">Delinquency</string>
    <string name="acknowledge">Acknowledged</string>
    <string name="unacknowledge">Unacknowledged</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">siops</string>
    <string name="notifications">Notifications</string>
    <string name="alarms"><u>Alarms</u></string>
    <string name="lessthenfour"><![CDATA[<4 hrs]]></string>
    <string name="_8_hrs"><![CDATA[<8 hrs]]></string>
    <string name="_12_hrs"><![CDATA[<12 hrs]]></string>
    <string name="_24_hrs"><![CDATA[<24 hrs]]></string>
    <string name="_1000"><![CDATA[< 1000]]></string>
    <string name="_850MHz">850 MHz</string>
    <string name="_1800MHz">1800 MHz</string>
    <string name="_2300MHz">2300 MHz</string>


    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="no_internet_connection">Oops! No Internet Connection. Please check your network connection</string>
    <string name="granite_in_service">Granite in service</string>
    <string name="dcb">Data Completeness Board</string>
    <string name="tower_site_status">Tower site status</string>
    <string name="elapsed">Elapsed</string>
    <string name="view_history"><u>view history</u></string>
    <string name="hide_history"><u>hide history</u></string>
    <string name="impacted_customers">Impacted Customers</string>
    <string name="trend"><u>Trend</u></string>
    <string name="activations">Activations</string>
    <string name="mnp">Mobile Number Portability</string>
    <string name="recharge">Recharge</string>
    <string name="macd">MACD</string>
    <string name="sort_filter"><![CDATA[Sort & Filter]]></string>
    <string name="order_to_activation_journey">Order to Activation Journey</string>
    <string name="base">Base:</string>
    <string name="jio_phone">Jio Phone:</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp">OTP</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="otp_expires_in">OTP Expires in</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="stage">Stage</string>
    <string name="today">today</string>
    <string name="recharge_journey">Recharge Journey</string>
    <string name="rooted_device_msg">This application will not work on rooted devices</string>
    <string name="max_no_of_otps">Reached maximum number of Otps</string>
    <string name="yesterday">Yesterday</string>
    <string name="port_in">Port In</string>
    <string name="port_out">Port Out</string>
    <string name="sim_change">Sim Change</string>
    <string name="ir">IR</string>
    <string name="apple_iwatch">Apple iWatch</string>
    <string name="ip_throughput">IP throughput</string>
    <string name="controls">Controls</string>
    <string name="missing_in_granite_production_state">Missing in Granite Production State</string>
    <string name="radio_access_network">Radio Access Network</string>
    <string name="filter">Filter</string>
    <string name="impacted_site">Impacted Site</string>
    <string name="availability">Availability</string>
    <string name="unavailability">Unavailability</string>
    <string name="rrc">RRC</string>
    <string name="cell_effective_nthroughput">Cell Effective Throughput</string>
    <string name="consumption_ndata_cell_day">Consumption\nData/Cell/Day</string>
    <string name="ip_throughput_n">Ip Throughput\n</string>
    <string name="dcr_n">DCR\n</string>
    <string name="mcr_n">MCR\n</string>
    <string name="consumption_voice_user_day">Consumption Voice/User/Day</string>
    <string name="ianl">IANL</string>
    <string name="trt">TRT</string>
    <string name="frt">FRT</string>
    <string name="deployment">Deployment</string>
    <string name="operations">Operations</string>
    <string name="dead">Dead</string>
    <string name="icu">ICU</string>
    <string name="hosp">Hosp</string>
    <string name="healthy">Healthy</string>
    <string name="infra">Infra</string>
    <string name="ran">RAN</string>
    <string name="backhaul">Backhaul</string>
    <string name="unknown">Unknown</string>
    <string name="resource">Resource</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="session_expired">Please login to continue</string>
    <string name="expected_sites">Expected Sites</string>
    <string name="missing_sites">Missing Sites</string>
    <string name="current_sites">Current Sites</string>
    <string name="missing_expected_sites_count">Missing Expected Sites Count</string>
    <string name="total_tower_sites">Total Tower Sites</string>
    <string name="total_tower_site">Total Tower Site</string>
    <string name="_11_12_2019"><![CDATA[<< 11/12/2019 >>]]></string>
    <string name="entered">Entered</string>
    <string name="activated">Activated</string>
    <string name="rejected">Rejected</string>
    <string name="in_process">In Process</string>
    <string name="time_sheet_clocking">Time Sheet Clocking</string>
    <string name="delinquency">Delinquency</string>
    //Calendar
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="open_defects_feature">Open Defects</string>
    <string name="open_business_impacting_incidents">Open Business Impacting Incidents</string>
    <string name="open_non_business_impacting_incidents">Open Non-Business Impacting Incidents</string>
    <string name="hpsm_ticket_number">HPSM Ticket Number</string>
    <string name="status">Status</string>
    <string name="severity">Severity</string>
    <string name="impact">Impact:</string>
    <string name="resolver_group">Resolver Group :</string>
    <string name="ageing_mins">Ageing(mins)</string>
    <string name="open_at">Open At</string>
    <string name="closed_at">Closed At</string>
    <string name="application">Application</string>
    <string name="open_severity_incident">Open Severity % Incident</string>
    <string name="service_glance_incidents">Service Glance - Incidents</string>
    <string name="average_resolution_time">Average resolution time</string>
    <string name="service_glance_changes">Service Glance - Changes</string>
    <string name="leadership_dashboard">Leadership Dashboard</string>
    <string name="business_service_health">Business Service Health</string>
    <string name="viewdetails">View Details</string>
    <string name="hidedetails">Hide Details</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="request_id">Request ID:</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="group">Group</string>
    <string name="pending_approvals">Pending Approvals</string>
    <string name="approvals">Please Enter Comment..</string>
    <string name="transfer_date_from">Transfer Date From</string>
    <string name="transfer_from">Transfer from</string>
    <string name="reason">Reason</string>
    <string name="initiated_by">Initiated By</string>
    <string name="job_role">Job Role</string>
    <string name="remarks">Remarks</string>
    <string name="date">Date</string>
    <string name="updated_by">Updated by</string>
    <string name="purchased">Purchased</string>
    <string name="filled">Filled</string>
    <string name="reamining">Reamining</string>
    <string name="data_completeness_board">Data Completeness Board</string>
    <string name="total_reading_site">Total Radiating Site</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="leave_type">Leave Type</string>
    <string name="leave_reason"><u>Reason</u></string>
    <string name="apply_leave">Apply Leave</string>
    <string name="ril_com">@ril.com</string>
    <string name="resource_name">Resource Name</string>
    <string name="excluded">Excluded</string>
    <string name="view_similar">View Similar</string>
    <string name="jio_com">jio.com</string>
    <string name="resource_productivity">Resource Productivity</string>
    <string name="time_spent_on_ngo">Time Spent on Ngo</string>
    <string name="governance_board">Governance Board</string>
    <string name="select_application">Select Application</string>
    <string name="search_application">Search Application</string>
    <string name="search">Search</string>

</resources>
